# taiga-fastmcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README-en.md  README.md  docker-compose.yml  guia_uso.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: experto-ddd.md  experto-documentacion.md  experto-tdd.md
.claude/commands/: ejecutar-flujo-completo.md  iniciar-proyecto.md
.claude/hooks/: validate-experto-ddd.sh  validate-experto-documentacion.sh  validate-experto-tdd.sh
.claude/output-styles/: ddd-style.md  doc-style.md  tdd-style.md
.claude/scripts/: run-flujo-completo.sh
.claude/skills/auto-test/: SKILL.md
.claude/skills/coverage-check/: SKILL.md
.claude/skills/format-code/: SKILL.md
.github/workflows/: tests.yml
Documentacion/: analisis_coherencia_completo.md  analisis_funcionalidades_taiga.md  analisis_tdd.md  analisis_tdd_epicas.md  arquitectura_ddd.md  audit_mcp_tools.json  caso_negocio.txt  caso_negocio_epicas.txt  cliente_mcp_doc.md  decisiones_ddd.md  estado_implementacion_ddd.md  estructura_proyecto.md  fastmcp.md  guia_tests.md  guia_tests_epicas.md  herramientas_testing.md  herramientas_testing_epicas.md  mejoras_taiga.md  parameter_changes.md  plan_mejoras_taiga.md  progreso_correccion_tests.md  prompt-test-real.txt  prompt_agentes_desarrollo.txt  prompt_exhaustivo.txt  prompt_prueba_real.txt  pruebas_mcp.txt  reporte_cobertura_funcionalidades.md  reporte_final_tdd.md  servidor_mcp_doc.md  taiga-api-mapping.md  taiga-explicacion.md  taiga.md  tarea_1.1_completada.md  testing_plan.md  tool_names_migration.md  tools_normalization_plan.csv  verificacion_cobertura_tdd.md  verificacion_cobertura_tdd_epicas.md  verificacion_final_ddd.md  verificacion_final_implementacion_epicas_ddd.md  (+1 more)
mejoras_0.1.1/: PLAN_RELEASE_0.3.0.md  RELEASE_SUMMARY.md  mejoras.md  plan_mejoras.md  plan_release_0.2.0.md  test_duplicados  test_duplicados_v2.md
scripts/: add_taiga_prefix.py  add_tool_annotations.py  audit_mcp_tools.py  check_docstrings.py  check_json_dumps.py  coverage_analysis.py  fix_test_tool_names.py  fix_test_type_annotations.py  validate_no_legacy.py  validate_phase1.py  validate_phase2.py
src/: __init__.py  config.py  server.py  taiga_client.py
src/application/: __init__.py
src/application/prompts/: __init__.py  taiga_prompts.py
src/application/resources/: __init__.py  taiga_resources.py
src/application/responses/: __init__.py  base.py  epic_responses.py  project_responses.py
src/application/tools/: __init__.py  auth_tools.py  cache_tools.py  epic_tools.py  issue_tools.py  membership_tools.py  milestone_tools.py  project_tools.py  search_tools.py  settings_tools.py  task_tools.py  user_tools.py  userstory_tools.py  webhook_tools.py  wiki_tools.py
src/application/use_cases/: __init__.py  base_use_case.py  epic_use_cases.py  issue_use_cases.py  member_use_cases.py  milestone_use_cases.py  project_use_cases.py  task_use_cases.py  user_story_use_cases.py  wiki_use_cases.py
src/domain/: __init__.py  exceptions.py  validators.py
src/domain/entities/: __init__.py  attachment.py  base.py  epic.py  issue.py  member.py  milestone.py  project.py  related_userstory.py  task.py  user_story.py  wiki_page.py
src/domain/repositories/: __init__.py  base_repository.py  epic_repository.py  issue_repository.py  member_repository.py  milestone_repository.py  project_repository.py  task_repository.py  user_story_repository.py  wiki_repository.py
src/domain/value_objects/: auth_token.py  email.py  project_slug.py
src/infrastructure/: __init__.py  auth_cache.py  batch.py  cache.py  cached_client.py  client_factory.py  config.py  container.py  http_session_pool.py  metrics.py  pagination.py  retry.py
src/infrastructure/logging/: __init__.py  config.py  correlation.py  decorators.py  logger.py  performance.py
src/infrastructure/middleware/: __init__.py  base.py  error_handling.py  logging.py  rate_limiting.py  timing.py
src/infrastructure/repositories/: __init__.py  base_repository_impl.py  epic_repository_impl.py  issue_repository_impl.py  member_repository_impl.py  milestone_repository_impl.py  project_repository_impl.py  task_repository_impl.py  user_story_repository_impl.py  wiki_repository_impl.py
tests/: conftest.py  conftest_tools.py
tests/e2e/: __init__.py  conftest.py  test_issue_tracking_workflow.py  test_project_workflow.py  test_sprint_workflow.py  test_team_workflow.py  test_wiki_workflow.py
tests/functional/: test_epic_tools_functional.py
tests/integration/: conftest.py  test_auth_integration.py  test_batch.py  test_compression.py  test_epic_use_cases.py  test_http_pool.py  test_issue_use_cases.py  test_issues_integration.py  test_member_use_cases.py  test_memberships_integration.py  test_milestone_use_cases.py  test_milestones_integration.py  test_pagination.py  test_project_use_cases.py  test_projects_integration.py  test_server_startup.py  test_taiga_client.py  test_task_use_cases.py  test_tasks_integration.py  test_user_story_use_cases.py  test_users_integration.py  test_webhooks_integration.py  test_wiki_integration.py  test_wiki_use_cases.py
tests/integration/mocks/: __init__.py  taiga_mock_server.py
tests/integration/tools/: __init__.py  conftest.py  test_auth_tools_integration.py  test_epic_tools_integration.py  test_issue_tools_integration.py  test_project_tools_integration.py  test_task_tools_integration.py  test_userstory_tools_integration.py
tests/performance/: __init__.py  test_stress.py  test_throughput.py
tests/regression/: __init__.py  conftest.py  test_snapshot_errors.py  test_snapshot_responses.py  test_snapshot_schemas.py
tests/unit/: test_additional_coverage.py  test_config_coverage.py  test_configuration.py  test_server.py  test_server_coverage.py
tests/unit/domain/: test_exceptions.py  test_validators.py
tests/unit/infrastructure/: __init__.py  test_auth_cache.py  test_cache.py  test_client_factory.py  test_config.py  test_logging.py  test_metrics.py  test_retry.py
(+90 files in other folders)
