[project]
name = "taiga-fastmcp"
version = "0.1.0"
description = "MCP Server for Taiga Project Management Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.13.2",
    "dependency-injector>=4.48.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-env>=1.1.0",
    "respx>=0.21.0",
    "faker>=25.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7.0",
    "bandit[toml]>=1.7.0",
    "types-aiofiles>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    # Phase 1 DDD migration: core domain/use_cases have 90%+ coverage
    # Tools layer (FastMCP wrappers) will be improved in Phase 2
    "--cov-fail-under=70",
    "--tb=short"
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that connect to Taiga API",
    "functional: Functional tests (end-to-end)",
    "slow: Tests that take more than 1 second",
    "performance: Performance tests (latency, throughput)",
    "stress: Stress tests (high volume, memory leaks, connection pool)",
    "taiga: Tests that require Taiga connection",
    "mcp: Tests for MCP protocol functionality",
    "transport: Tests for transport layers (stdio/http)",
    "auth: Authentication related tests",
    "epic: Tests for Epic functionality",
    "issue: Tests for Issue functionality",
    "milestone: Tests for Milestone functionality",
    "project: Tests for Project functionality",
    "task: Tests for Task functionality",
    "userstory: Tests for User Story functionality",
    "wiki: Tests for Wiki functionality",
    "user: Tests for User functionality",
    "membership: Tests for Membership functionality",
    "webhook: Tests for Webhook functionality",
    "epics: Tests for Epics functionality",
    "issues: Tests for Issues functionality",
    "milestones: Tests for Milestones functionality",
    "projects: Tests for Projects functionality",
    "tasks: Tests for Tasks functionality",
    "userstories: Tests for User Stories functionality",
    "users: Tests for Users functionality",
    "memberships: Tests for Memberships functionality",
    "webhooks: Tests for Webhooks functionality"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    # taiga_client.py is low-level HTTP infrastructure that is mocked in tests
    # Coverage for this file will be addressed when real API integration tests are added
    "src/taiga_client.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "*.egg-info",
    "scripts",
    "fix_*.py",
    "apply_*.py",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
    "PT",    # flake8-pytest-style
    "PIE",   # flake8-pie
    "T20",   # flake8-print (detect print statements)
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "C901",   # Function is too complex
    "T201",   # print found (permitimos print para debugging)
    "N818",   # Exception name should end with Error (legacy exceptions)
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused function args in tests (fixtures)
    "PT",      # Pytest style rules
    "T20",     # Print statements allowed in tests
    "N806",    # Non-lowercase variables (MockClient, etc.)
    "E722",    # Bare except in cleanup code
]
"__init__.py" = [
    "F401",    # Unused imports in __init__.py
]
"src/infrastructure/repositories/*.py" = [
    "E722",    # Bare except for safe fallback returns
]
"src/server.py" = [
    "E722",    # Bare except for optional tool loading
]
"src/tools/*.py" = [
    "E722",    # Bare except for optional comment creation
]
"src/application/tools/*.py" = [
    "ARG001",  # Unused function args - MCP tool interface requires auth_token parameter
    "ARG002",  # Unused method args - MCP tool interface requires auth_token parameter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Exclude specific directories
exclude = [
    "^.venv/",
    "^htmlcov/",
    "^.pytest_cache/",
    "^scripts/",
    "^fix_.*\\.py$",
    "^apply_.*\\.py$",
]

# Per-module options - Only for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "httpx.*",
    "aiofiles.*",
    "respx.*",
    "faker.*",
    "dependency_injector.*",
    "requests.*",
]
ignore_missing_imports = true

# Tools files use FastMCP decorators and dynamic client injection
# These have pre-existing type issues that are beyond scope of Task 1.9
[[tool.mypy.overrides]]
module = [
    "src.application.tools.*",
]
ignore_errors = true

# Container uses dependency_injector with dynamic types
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.container",
]
disallow_any_generics = false
disallow_subclassing_any = false

# Test files are excluded from mypy checking
# This matches pre-commit configuration which also excludes tests from mypy
# Tests use mocks, fixtures, and dynamic patterns that are impractical to type strictly
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "htmlcov",
    ".pytest_cache",
    "scripts",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - we don't use paramiko
    "B105",  # hardcoded_password_string - false positive for password redaction with '***'
    "B110",  # try_except_pass - intentional graceful error handling in shutdown
    "B113",  # request_without_timeout - requests used only in sync fallback
    "B311",  # random - used for jitter in retry mechanism, not for security
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "faker>=38.2.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.7",
    "syrupy>=5.0.0",
    "types-aiofiles>=25.1.0.20251011",
    "types-requests>=2.32.4.20250913",
]
